Optimize throughput of common Inflater implementation