@@ -55,7 +55,17 @@ kotlin {
             test(listOf(NativeBuildType.RELEASE))
         }
     }
-    withJvm()
+    withJvm {
+        testRuns {
+            create("vector") { // Run tests with jdk.incubator.vector API
+                setExecutionSourceFrom(compilations["test"])
+                executionTask {
+                    modularity.inferModulePath = true
+                    jvmArgs("--add-modules", "jdk.incubator.vector")
+                }
+            }
+        }
+    }
     withWeb {
         withBrowser {
             useEsModules()
@@ -94,6 +104,11 @@ kotlin {
         commonTest {
             dependencies {
                 implementation(libs.kotlin.test)
+            }
+        }
+        jvmTest {
+            dependencies {
+                implementation(libs.kotlin.test.junit)
             }
         }
     }
